@@ -412,16 +412,16 @@ sub OutputSGML {
 
 		if ($signals_synop ne '') {
 		    $signals_synop = <<EOF;
-<refsect1 id="signal_proto">
-<title id="signal_proto.title">Signals</title>
+<refsect1 role="signal_proto">
+<title role="signal_proto.title">Signals</title>
 <synopsis>
 
 ${signals_synop}</synopsis>
 </refsect1>
 EOF
 		    $signals_desc  = <<EOF;
-<refsect1 id="signals">
-<title id="signals.title">Signal Details</title>
+<refsect1 role="signals">
+<title role="signals.title">Signal Details</title>
 $signals_desc
 </refsect1>
 EOF
@@ -429,16 +429,16 @@ EOF
 
 		if ($args_synop ne '') {
 		    $args_synop = <<EOF;
-<refsect1 id="properties">
-<title id="properties.title">Properties</title>
+<refsect1 role="properties">
+<title role="properties.title">Properties</title>
 <synopsis>
 
 ${args_synop}</synopsis>
 </refsect1>
 EOF
 		    $args_desc  = <<EOF;
-<refsect1 id="property_details">
-<title id="property_details.title">Property Details</title>
+<refsect1 role="property_details">
+<title role="property_details.title">Property Details</title>
 $args_desc
 </refsect1>
 EOF
@@ -446,16 +446,16 @@ EOF
 
 		if ($child_args_synop ne '') {
 		    $args_synop .= <<EOF;
-<refsect1 id="child_properties">
-<title id="child_properties.title">Child Properties</title>
+<refsect1 role="child_properties">
+<title role="child_properties.title">Child Properties</title>
 <synopsis>
 
 ${child_args_synop}</synopsis>
 </refsect1>
 EOF
 		    $args_desc .= <<EOF;
-<refsect1 id="child_property_details">
-<title id="child_property_details.title">Child Property Details</title>
+<refsect1 role="child_property_details">
+<title role="child_property_details.title">Child Property Details</title>
 $child_args_desc
 </refsect1>
 EOF
@@ -463,16 +463,16 @@ EOF
 
 		if ($style_args_synop ne '') {
 		    $args_synop .= <<EOF;
-<refsect1 id="style_properties">
-<title id="style_properties.title">Style Properties</title>
+<refsect1 role="style_properties">
+<title role="style_properties.title">Style Properties</title>
 <synopsis>
 
 ${style_args_synop}</synopsis>
 </refsect1>
 EOF
 		    $args_desc .= <<EOF;
-<refsect1 id="style_properties_details">
-<title id="style_properties_details.title">Style Property Details</title>
+<refsect1 role="style_properties_details">
+<title role="style_properties_details.title">Style Property Details</title>
 $style_args_desc
 </refsect1>
 EOF
@@ -480,8 +480,8 @@ EOF
 
 		if ($hierarchy ne "") {
 		    $hierarchy = <<EOF;
-<refsect1 id="object_hierarchy">
-<title id="object_hierarchy.title">Object Hierarchy</title>
+<refsect1 role="object_hierarchy">
+<title role="object_hierarchy.title">Object Hierarchy</title>
 $hierarchy
 </refsect1>
 EOF
@@ -489,8 +489,8 @@ EOF
 
 		if ($interfaces ne "") {
 		    $interfaces = <<EOF;
-<refsect1 id="impl_interfaces">
-<title id="impl_interfaces.title">Implemented Interfaces</title>
+<refsect1 role="impl_interfaces">
+<title role="impl_interfaces.title">Implemented Interfaces</title>
 $interfaces
 </refsect1>
 EOF
@@ -498,8 +498,8 @@ EOF
 
 		if ($implementations ne "") {
 		    $implementations = <<EOF;
-<refsect1 id="implementations">
-<title id="implementations.title">Known Implementations</title>
+<refsect1 role="implementations">
+<title role="implementations.title">Known Implementations</title>
 $implementations
 </refsect1>
 EOF
@@ -507,8 +507,8 @@ EOF
 
 		if ($prerequisites ne "") {
 		    $prerequisites = <<EOF;
-<refsect1 id="prerequisites">
-<title id="prerequisites.title">Prerequisites</title>
+<refsect1 role="prerequisites">
+<title role="prerequisites.title">Prerequisites</title>
 $prerequisites
 </refsect1>
 EOF
@@ -516,8 +516,8 @@ EOF
 
 		if ($derived ne "") {
 		    $derived = <<EOF;
-<refsect1 id="derived_interfaces">
-<title id="derived_interfaces.title">Known Derived Interfaces</title>
+<refsect1 role="derived_interfaces">
+<title role="derived_interfaces.title">Known Derived Interfaces</title>
 $derived
 </refsect1>
 EOF
@@ -1558,7 +1558,7 @@ sub OutputSGMLFile {
     print OUTPUT <<EOF;
 <refentry id="$section_id">
 <refmeta>
-<refentrytitle id="top_of_page">$title</refentrytitle>
+<refentrytitle role="top_of_page">$title</refentrytitle>
 <manvolnum>3</manvolnum>
 <refmiscinfo>\U$MODULE\E Library</refmiscinfo>
 </refmeta>
@@ -1569,8 +1569,8 @@ sub OutputSGMLFile {
 <!--[<xref linkend="desc" endterm="desc.title"/>]-->
 </refnamediv>
 $stability
-<refsynopsisdiv id="synopsis">
-<title id="synopsis.title">Synopsis</title>
+<refsynopsisdiv role="synopsis">
+<title role="synopsis.title">Synopsis</title>
 $object_anchors
 <synopsis>
 
@@ -1587,13 +1587,13 @@ $$implementations
 $$args_synop
 $$signals_synop
 
-<refsect1 id="desc">
-<title id="desc.title">Description</title>
+<refsect1 role="desc">
+<title role="desc.title">Description</title>
 $long_desc
 </refsect1>
 
-<refsect1 id="details">
-<title id="details.title">Details</title>
+<refsect1 role="details">
+<title role="details.title">Details</title>
 $$details
 </refsect1>
 $$args_desc
